# Task-Suitability-Profiles

./: .gitignore  Future_of_Skills_Questionnaire.qsf  LICENSE  README.md  pyproject.toml
Benchmarks/: README.md  extract_logs_to_csv.py  mem_monitor.py  run_all_tasks.py
Benchmarks/Annotated_Benchmarks/AGIEval/: agieval_freeform_annotations.csv  agieval_mcq_annotations.csv  agieval_task.py
Benchmarks/Annotated_Benchmarks/Abstract_Narrative_Understanding/: README.md  abstract_narrartive_understanding_task.py
Benchmarks/Annotated_Benchmarks/BigBenchHard/: bigbenchhard_annotations.csv  bigbenchhard_task.py
Benchmarks/Annotated_Benchmarks/BigToM/: bigtom_annotations.csv  bigtom_task.py
Benchmarks/Annotated_Benchmarks/Cause_and_Effect/: cause_and_effect_annotations.csv  cause_and_effect_task.py
Benchmarks/Annotated_Benchmarks/CoQA/: CoQA_task.py  coqa_annotations.csv
Benchmarks/Annotated_Benchmarks/Crow/: README.md  crow_task.py
Benchmarks/Annotated_Benchmarks/EWoK/: ewok_annotations.csv  ewok_task.py
Benchmarks/Annotations/: annotate_tasks.py  item_allocations.json  run_annotations.py
Suitability/: README.md
Suitability/config/: abilities.csv  domains.csv  tasks.csv
Suitability/data/raw/: company_data.csv  (+2 more)
Suitability/scripts/: analyze_battery_coverage.py  build_ability_matrix.py  clear_csv_columns.py  plot_accuracy_by_capability.py  plot_domain_suitability.py  run_inference.py  run_population_inference.py  run_sim_inference.py  run_simulation.py  run_suitability.py  select_battery_items.py  visualize_profiles.py
Suitability/src/: __init__.py
(+70 files in other folders)
