[project]
name = "task-suitability-profiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.23.4",
    "datasets>=4.8.2",
    "dill>=0.4.1",
    "google-genai>=1.68.0",
    "gymnasium>=1.2.3",
    "inspect-ai>=0.3.197",
    "matplotlib>=3.10.8",
    "minigrid>=3.0.0",
    "numba>=0.64.0",
    "numpy>=2.2.6",
    "nutpie>=0.15.2",
    "openai>=2.29.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pymc>=5.25.1",
    "pytensor>=2.31.7",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "typing-extensions>=4.15.0",
    "torch",
    "transformers",
    "accelerate",
    "psutil",
]

[tool.setuptools.packages.find]
include = ["Benchmarks*", "Suitability*"]

[dependency-groups]
vllm = [
    "vllm>=0.23.0",
]
